[package]
name = "sum"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/coriolinus/sum"
publish = false

[dependencies]
anyhow = "1.0.98"
arrayvec = "0.7.6"
bstr = "1.12.0"
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"

[[bin]]
name = "sums"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
